--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/feature-content.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/table-of-contents.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -147,7 +148,7 @@
 
     <div class="main-container">
         <aside class="sidemenu">
-            <h2 class="sidemenu_header">Features</h2>
+            <h2 class="sidemenu_header">@Localizer["Features"]</h2>
             @if (Model.FeatureTree != null && Model.FeatureTree.Any())
             {
                 @RenderTree(Model.FeatureTree)
@@ -160,10 +161,46 @@
         <main class="content-area">
             @RenderBody()
         </main>
-        <aside class="sidemenu">
-            @if (Model.FeatureTree != null && Model.FeatureTree.Any())
+        <aside class="table_of_contents">
+            @if (Model.SelectedFeature != null)
             {
-                @RenderTree(Model.FeatureTree)
+               <div>
+                    <h2 class="table_of_contents_header">@Localizer["Table of Contents"]</h2>
+                    <ul>
+                        <li>
+                            <a class="feature_name" href="#@Model.SelectedFeature.Name-title">@Model.SelectedFeature.Name</a>
+                            @if (Model.SelectedFeature.Rules.Any())
+                            {
+                                <ul>
+                                    @foreach (var rule in Model.SelectedFeature.Rules)
+                                    {
+                                        <li>
+                                            <a href="#@rule.Name-rule">@rule.Name</a>
+                                            <ul>
+                                                @foreach (var scenario in rule.Scenarios)
+                                                {
+                                                    <li>
+                                                        <a href="#@scenario.Name-scenario">@scenario.Name</a>
+                                                    </li>
+                                                }
+                                            </ul>
+                                        </li>
+                                    }
+                                </ul>
+                            }
+                            else {
+                                <ul>
+                                    @foreach (var scenario in Model.SelectedFeature.Scenarios)
+                                    {
+                                        <li>
+                                            <a href="#@scenario.Name-scenario">@scenario.Name</a>
+                                        </li>
+                                    }
+                                </ul>
+                            }
+                        </li>
+                    </ul>
+               </div>
             }
             else
             {
