--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -192,6 +192,10 @@
   scroll-padding-top: -100px;
 }
 
+[id$="-title"]{
+  scroll-margin-top: 100px;
+}
+
 [id$="-rule"]{
   scroll-margin-top: 100px;
 }
@@ -265,8 +269,6 @@
   background-color: white;
 }
 
-
-
 .scenario_list {
   padding: 0;
   margin: 0;
@@ -274,4 +276,12 @@
 
 .scenario_list hr {
   border-color: #14151a;
+}
+
+.select_feature {
+  font-size: 2em;
+  font-weight: bold;
+  padding: 0.5em;
+  margin: auto;
+  background-color: #1E2129;
 }
