--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -136,9 +136,33 @@
   overflow: visible;
   padding-left: 5px;
   margin-bottom: 10px;
-  border-left: 2px solid rgba(172, 169, 169, 0.151);
+  border-left: 2px solid rgba(172, 169, 169, 0.479);
 }
 
+li .dropdown-content.show {
+  border-left: 2px solid rgb(151, 151, 173);
+}
+
+li li .dropdown-content.show {
+  border-left: 2px solid rgb(127, 127, 179);
+}
+
+li li li .dropdown-content.show {
+  border-left: 2px solid rgb(103, 103, 177);
+}
+
+li li li li .dropdown-content.show {
+  border-left: 2px solid rgb(72, 72, 197);
+}
+
+li li li li li .dropdown-content.show {
+  border-left: 2px solid rgb(52, 52, 197);
+}
+
+li li li li li li .dropdown-content.show {
+  border-left: 2px solid rgb(42, 42, 211);
+
+}
 .dropdown-content.show ul li {
   margin: 0;
 }
@@ -203,3 +227,8 @@
   width: 18px;
   margin-right: 5px;
 }
+
+.active_sidebar {
+  color: #2977ff !important;
+}
+
