--- a/source/VizGurka/wwwroot/css/table-of-contents.css
+++ b/source/VizGurka/wwwroot/css/table-of-contents.css
@@ -9,9 +9,9 @@
 
   .table_of_contents h2 {
     font-size: 1.5rem;
-    font-weight: 500;
+    font-weight: 400;
+    padding-left: 40px;
     margin-bottom: 1rem;
-    text-align: center;
     color: #E2E4E98F;
   }
 
@@ -26,4 +26,8 @@
   .table_of_contents a {
     color: #E2E4E9D1;
     text-decoration: none;
+  }
+
+  .table_of_contents a:hover {
+    color: #2977ff;
   }
