--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -32,6 +32,7 @@
   flex-direction: column;
   min-width: 30vw;
   max-width: 30vw;
+  max-height: 89vh;
   height: 89vh;
   min-height: 89vh;
   background-color: rgb(30, 33, 41);
@@ -42,6 +43,7 @@
 
 .sidemenu ul{
   margin: auto;
+  margin-bottom: 20px;
   max-width: 25vw;
 }
 
