navbar responsive down to 768px

--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="~/css/feature-content-queries.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sidemenu-queries.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/table-of-contents-queries.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/navbar-queries.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
